2009-03-22  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui:
	* src/entry.c (almanah_entry_class_init), (almanah_entry_finalize),
	(almanah_entry_get_property), (almanah_entry_set_property),
	(almanah_entry_is_important), (almanah_entry_set_is_important):
	* src/entry.h:
	* src/main-window.c (almanah_main_window_new),
	(mw_important_activate_cb), (mw_about_activate_cb),
	(mw_calendar_day_selected_cb):
	* src/storage-manager.c (create_tables),
	(almanah_storage_manager_get_entry),
	(almanah_storage_manager_set_entry),
	(almanah_storage_manager_search_entries):
	* src/storage-manager.h: Add the ability to mark entries as important.
	(Helps: #572927)

2009-03-01  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui:
	* src/main-window.c (save_current_entry),
	(mw_insert_time_activate_cb): Added an "Insert Time" action, which
	inserts the current time at the cursor position. (Closes: #572544)

2009-03-01  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Added some missing #includes.
	* src/storage-manager.c (back_up_file),
	(almanah_storage_manager_connect): Make an automatic backup of the
	database before opening it just to be safe. (Closes: #572926)

2009-02-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/definition.c:
	* src/definition.h:
	* src/definitions/contact.c
	(almanah_contact_definition_class_init),
	(almanah_contact_definition_init),
	(almanah_contact_definition_dispose), (contact_view),
	(contact_build_dialog), (contact_close_dialog),
	(contact_parse_text), (contact_get_blurb):
	* src/definitions/contact.h: Add a new "Contact" definition type,
	which allows linking of definitions to Evolution contacts.

2009-01-29  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c (database_idle_cb), (encrypt_database):
	Only delete the plaintext database file if the encrypted database
	file's size is greater than 0B, to try and prevent data loss in
	odd situations.
